[package]
name = "exampledl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#halo2_proofs = { git = "https://github.com/zcash/halo2.git", branch = "reduce-ast-evaluator-memory-usage"}
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git"}
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.2.1" }
halo2deeplearning = {git = "https://github.com/jasonmorton/halo2deeplearning.git"}



